--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "motoko-build-template",
-  "version": "1.0.0",
-  "description": "This repository is a template for all canister repositories that want to support reproducible builds.",
+  "name": "stable-local-log-mo",
+  "version": "0.1.0",
+  "description": "A powerful, modular logging infrastructure for Internet Computer (IC) projects. Designed to be instantiated once and shared across canisters or classes, providing namespace-based filtering, log levels, buffered storage, and upgrade-safe state management.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "mops test && jest",
+    "build": "dfx build --check && dfx generate && tsc"
   },
   "type": "module",
   "keywords": [],
@@ -15,7 +16,7 @@
     "@dfinity/candid": "^2.4.0",
     "@dfinity/identity": "^2.4.0",
     "@dfinity/principal": "^2.4.0",
-    "@hadronous/pic": "^0.11.0",
+    "@dfinity/pic": "^0.12.0",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "ts-jest": "^29.3.1",
